# rayrm

./: .gitignore  CMakeLists.txt  Folder.DotSettings  README.md  main.cpp  添删右键菜单.bat
assets/: app.rc
